--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  overflow: hidden;
+
 }
 .catalogue{
   display: flex;
@@ -25,4 +25,377 @@
   width: 100%;
   height: 100vh;
   position: absolute;
+  z-index: -1;
+  
+}
+.headerBg{
+  width: 100%;
+  height: 100vh;
+  background-image: url('assets/image/img1.png');
+  position: relative;
+}
+.logo img{
+  width: 100px;
+}
+.LogoNav{
+  width: 90%;
+
+}
+/* Section cinéma */
+.contenu {
+  width: 100%;
+  height: auto;
+  background-color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.down {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+h2 {
+  width: 85%;
+  height: 100px;
+  padding: 0 100px;
+  color: #f1f1f1;
+  font-size: 36px;
+  line-height: 100px;
+  display: block;
+  text-align: start;
+  font-family: "rajdhani", "sans-serif";
+  font-weight: medium;
+  text-transform: uppercase;
+}
+.contenu p.presentation {
+  width: 85%;
+  padding: 0 300px 20px 100px;
+  /* background-color: aquamarine; */
+  width: 85%;
+  color: #ffffff;
+  font-size: 36px;
+  font-weight: normal;
+  /* border: 4px solid #c4c4c448; */
+  text-align: justify;
+  border-top: none;
+  border-bottom: none;
+  font-size: 36px;
+  font-family: "Space Grotesk";
+  margin-bottom: 50px;
+}
+.carte {
+  width: 85%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 100px;
+}
+.infoCard {
+  width: 400px;
+  height: auto;
+}
+.infoCard img {
+  width: 100%;
+}
+.infoCard p {
+  font-family: "rajdhani", "sans-serif";
+  text-align: center;
+  color: #ffffff;
+  font-size: 30px;
+}
+.imgJusticeLeag {
+  width: 100%;
+  height: auto;
+}
+.imgJusticeLeag img {
+  width: 100%;
+}
+.imageBatarang {
+  /* background-color: #ffff00; */
+  transform: translate(-550px, 100px);
+}
+.imageBatman {
+  /* background-color: #ffff00; */
+  transform: translate(725px, 100px);
+}
+/*---------------------Section Multimédia---------------*/
+.multimedia {
+  width: 100%;
+  height: auto;
+  background-color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.multimedia .content {
+  width: 85% !important;
+  padding: 20px;
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
+  color: #c4c4c448;
+}
+.flecheGauche,
+.flecheDroite {
+  width: 10%;
+  height: auto;
+  padding-left: 0px;
+}
+.flecheDroite {
+  display: flex;
+  justify-content: end;
+}
+.card {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #c4c4c448;
+  border-radius: 0 20px 20px 0;
+  background-image: linear-gradient(
+    90deg,
+    rgba(237, 222, 191, 0.4) 40%,
+    rgba(25, 88, 125, 0.4) 100%
+  );
+}
+.imagecard {
+  width: 100%;
+  height: auto;
+  background-image: url("assets/image/img12.png");
+  background-size: contain;
+}
+.card:hover {
+  background-image: linear-gradient(
+    90deg,
+    rgba(237, 222, 191, 0.4) 40%,
+    rgba(25, 88, 125, 0.4) 100%
+  );
+}
+.contentCard {
+  padding: 20px;
+}
+.contentCard h3 {
+  font-family: "Space Grotesk", "sans-serif";
+  text-transform: uppercase;
+  font-size: 18px;
+  color: #a3a3a3;
+}
+.contentCard h4 {
+  font-family: "rajdhani", "sans-serif";
+  font-weight: unset;
+  font-size: 22px;
+  color: #c4c4c4;
+}
+.contentCard h5 {
+  font-family: "rajdhani", "sans-serif";
+  font-weight: unset;
+  font-size: 18px;
+  color: #fff;
+}
+.contentCard h5 span {
+  font-family: "rajdhani", "sans-serif";
+  font-weight: unset;
+  font-size: 18px;
+  color: #ffff00;
+}
+.bandeAnnonce {
+  width: 85%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 200px;
+}
+.bandeAnnonce img {
+  width: 85%;
+}
+/* -----------------Formulaire de contact-------------- */
+.FormulaireDeContact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 99;
+  width: 100%;
+  height: auto;
+  border-top: 3px solid rgb(34, 37, 21);
+  background: linear-gradient(
+    90deg,
+    rgba(13, 14, 9, 0.958420868347339) 40%,
+    rgba(10, 20, 22, 1) 100%
+  );
+  background: rgb(13, 14, 9);
+  background: linear-gradient(
+    130deg,
+    rgba(13, 14, 9, 0.958420868347339) 40%,
+    rgba(10, 20, 22, 1) 100%
+  );
+}
+.FormulaireDeContact h2 {
+  text-align: center;
+}
+form {
+  margin-top: 100px;
+}
+.inputmail {
+  border: none;
+  border-bottom: 2px solid #c4c4c448;
+  display: block;
+  width: 100%;
+  height: 43px;
+  font-size: 22px;
+  margin-top: 30px;
+  background: none;
+}
+label {
+  font-family: "Space Grotesk", "sans-serif";
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 200px;
+  height: 36px;
+  line-height: 50px;
+  font-size: 30px;
+  color: #ffffff;
+}
+form .boutons {
+  margin-top: 40px;
+  margin-left: 60px;
+  margin-bottom: 80px;
+}
+form p {
+  font-family: "Rajdhani";
+  font-size: 22px;
+  color: #c4c4c448;
+}
+.formBoutons {
+  width: 100%;
+  height: 100px;
+  padding-left: 20%;
+  padding-right: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+  /* background-color: aqua; */
+}
+.formBoutons button {
+  width: auto;
+  height: 40%;
+  padding: 10px 20px 20px 20px;
+  line-height: 16px;
+  border: 1px solid;
+  border-image: linear-gradient(45deg, #eddebf, #19587d) 10;
+  background-color: transparent;
+  color: #f1f1f1;
+  font-size: 16px;
+}
+/*----------------Fin section formulaire de contact --------------*/
+/*-----------Section Réplique -------------*/
+.replique {
+  width: 100%;
+  height: 100vh;
+  background-color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.containerReplique {
+  width: 60%;
+  height: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.guillemetGauche {
+  position: relative;
+  margin-top: 0px;
+  width: 30%;
+  height: 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.guillemetGauche img {
+  margin-top: 0px;
+}
+.guillemetDroite {
+  width: 30%;
+  height: 100%;
+  padding-top: 300px;
+}
+
+.repliquePhrase {
+  width: 80%;
+  height: 100%;
+  text-align: center;
+  text-justify: center;
+  padding-top: 250px;
+  padding-right: 50px;
+}
+.repliquePhrase p {
+  font-family: "Space Grotesk", "sans-serif";
+  font-size: 22px;
+  color: #f1f1f1;
+}
+.lastPara {
+  margin-top: 30px;
+  width: 52%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: "Space Grotesk", "sans-serif";
+}
+.lastPara p {
+  font-size: 18px;
+  color: #c4c4c448;
+}
+/*-----------Fin section Réplique -------------*/
+/* ------------------Footer ------------*/
+footer {
+  width: 100%;
+  height: 350px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #000000;
+}
+.warnerBros {
+  margin: 10px;
+}
+.warnerBrosLastPara {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.warnerBrosLastPara p {
+  font-family: "Space Grotesk", "sans-serif";
+  font-size: 15px;
+  color: #c4c4c448;
+}
+.Icones {
+  width: 20%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+.Icones img:hover {
+  filter: brightness(0) saturate(100%) invert(88%) sepia(44%) saturate(1037%)
+    hue-rotate(356deg) brightness(107%) contrast(106%);
 }
