--- a/src/App.css
+++ b/src/App.css
@@ -20,26 +20,124 @@
 --linear-gradient-4: linear-gradient(180deg, #19587D 0%, #B11313 100%);
 --linear-gradient-5: linear-gradient(180deg, #07338C 0%, #81264A 100%);
 --linear-gradient-6: linear-gradient(180deg, #000000 0%, #212E3E 100%);
+--flex-center-column: {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+};
+--flex-center-row: {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+};
+--flex-center:{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+}
+.header{
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  background-image: url;
+  
 }
 .header{
   width: 100%;
   height: 100vh;
   position: absolute;
-  z-index: -1;
-  
 }
-.headerBg{
-  width: 100%;
-  height: 100vh;
-  background-image: url('assets/image/img1.png');
-  position: relative;
+.ContainerNavLogo{
+  padding-top: 5rem;
+  position: absolute;
+  margin-left: 10%;
+  overflow: hidden;
+
 }
 .logo img{
   width: 100px;
 }
-.LogoNav{
-  width: 90%;
+.NavBarMenu{
+  width: 100%;
+  height: 100%;
 
+}
+.navLinkItem{
+  font-family: "cantarell";
+  font-size: 36px;
+
+}
+.navLinkItem::after{
+  content: "";
+  display: block;
+  margin: 0 0;
+  width: 0%;
+  height: 2px;
+  background-color: #f1f1f1;
+  transition: all 0.2s ease-in-out;
+}
+.navLinkItem.active::after {
+  content: "";
+  display: block;
+  margin-top: 0;
+  margin: 0 0;
+  width: 100%;
+  height: 4px;
+  background-color: #f1f1f1;
+  transition: all 0.2s ease-in-out;
+}
+.navLinkItem:hover::after {
+  content: "";
+  display: block;
+  margin: 0 0;
+  width: 100%;
+  height: 4px;
+  background-color: #f1f1f1;
+  transition: all 0.2s ease-in-out;
+}
+.toggleIcon{
+  color: white;
+  background-color: white;
+}
+.HeaderHome{
+  padding: 100px 100px;
+  width: 100%;
+  height: 100vh;
+  letter-spacing: 3px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url("assets/image/img1.png");
+
+}
+
+.IntroHome{
+  position: absolute;
+  width: 85%;
+  height: 80vh;
+  color: #ffffff;
+  /* background-color: #B11313; */
+  font-size: 1.5em;
+  font-weight: 100;
+  padding: 350px 150px 20px 7%;
+  text-align: center;
+  border-top: none;
+  border-bottom: none;
+  font-family: 'Advent Pro', sans-serif;
+  font-style: italic;
+}
+.Dclogo{
+  width: 200px;
+  height: 200px;
+  background-image: url('assets/logos/logoDC.png');
+  background-position: center;
+  background-size: cover;
+}
+.Dclogo img{
+  width: 100%;
 }
 /* Section cinéma */
 .contenu {
