Styliser le HomePage

--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,15 @@
   flex-direction: row;
   justify-content: space-evenly;
 }
+.ResSocIcone{
+  width: 50px;
+  height: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .Dclogo{
   width: 300px;
   height: 300px;
@@ -166,7 +175,7 @@
 .contenu {
   width: 100%;
   height: auto;
-  background-color: #000000;
+  background: var(--linear-gradient-6);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -179,7 +188,7 @@
   align-items: center;
   justify-content: center;
 }
-h2 {
+.contenu h2 {
   width: 85%;
   height: 100px;
   padding: 0 100px;
@@ -195,17 +204,15 @@ h2 {
 .contenu p.presentation {
   width: 85%;
   padding: 0 300px 20px 100px;
-  /* background-color: aquamarine; */
   width: 85%;
   color: #ffffff;
   font-size: 36px;
-  font-weight: normal;
-  /* border: 4px solid #c4c4c448; */
+  font-weight: 500;
   text-align: justify;
   border-top: none;
   border-bottom: none;
-  font-size: 36px;
-  font-family: "Space Grotesk";
+  font-size: 16px;
+  font-family: "cantarell";
   margin-bottom: 50px;
 }
 .carte {
@@ -230,6 +237,9 @@ h2 {
   text-align: center;
   color: #ffffff;
   font-size: 30px;
+}
+.BatVsup{
+
 }
 .imgJusticeLeag {
   width: 100%;
@@ -283,6 +293,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   border: 1px solid #c4c4c448;
   border-radius: 0 20px 20px 0;
   background-image: linear-gradient(
@@ -291,12 +302,7 @@ h2 {
     rgba(25, 88, 125, 0.4) 100%
   );
 }
-.imagecard {
-  width: 100%;
-  height: auto;
-  background-image: url("assets/image/img12.png");
-  background-size: contain;
-}
+
 .card:hover {
   background-image: linear-gradient(
     90deg,
@@ -347,25 +353,19 @@ h2 {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  position: relative;
-  z-index: 99;
   width: 100%;
   height: auto;
-  border-top: 3px solid rgb(34, 37, 21);
-  background: linear-gradient(
-    90deg,
-    rgba(13, 14, 9, 0.958420868347339) 40%,
-    rgba(10, 20, 22, 1) 100%
-  );
-  background: rgb(13, 14, 9);
-  background: linear-gradient(
-    130deg,
-    rgba(13, 14, 9, 0.958420868347339) 40%,
-    rgba(10, 20, 22, 1) 100%
-  );
+  background-image: url('assets/image/img16.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+
 .FormulaireDeContact h2 {
   text-align: center;
+  color: white;
+  font-family: "rajdhani", "sans-serif";
+  font-size: 62px;
 }
 form {
   margin-top: 100px;
