--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,6 @@
   background-size: cover;
   background-position: center;
   background-image: url("assets/image/img1.png");
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -151,7 +150,7 @@
 
 }
 .Textintro {
-  width: 50%;
+  width: 80%;
   height: 260px;
   padding: 5%;
 
@@ -164,7 +163,7 @@
   line-height: 28px;
   font-style: italic;
 }
-.introTextHome span{
+.introText span{
   font-family: 'Advent Pro', sans-serif;
   font-weight: 400;
   font-size: 128px;
@@ -502,9 +501,9 @@ footer {
   margin-bottom: 20px;
 }
 .warnerBrosLastPara p {
-  font-family: "Space Grotesk", "sans-serif";
+  font-family: "cantarell", "sans-serif";
   font-size: 15px;
-  color: #c4c4c448;
+  color: white;
 }
 .Icones {
   width: 20%;
@@ -520,3 +519,79 @@ footer {
   filter: brightness(0) saturate(100%) invert(88%) sepia(44%) saturate(1037%)
     hue-rotate(356deg) brightness(107%) contrast(106%);
 }
+/*Page E-shop*/
+.HeaderEshop{
+  width: 100%;
+  height: 100vh;
+  letter-spacing: 3px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url("assets/image/img20.png");
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.IntroEshop{
+  width: 100%;
+  height: 80vh;
+  color: #ffffff;
+  font-size: 1.5em;
+  text-align: center;
+  border-top: none;
+  border-bottom: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+
+}
+.introText span {
+  margin-top: 80px;
+  width: 100%;
+  text-transform: uppercase;
+}
+/*Catalogues*/
+.CatalFilter{
+  padding-top: 50px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  background-color: #000000;
+}
+/*Carte Liste Produit*/
+.ProductListli{
+  width: 80%;
+  list-style: none;
+}
+.infoProduct{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  border: 2px solid #f1f1f1;
+  margin-bottom: 20px;
+}
+.productName, .productPrice{
+  font-family: "Rajdhani";
+  text-transform: uppercase;
+  color: #B11313;
+}
+.Button button {
+  width: 100%;
+  height: 50px;
+  color: #f1f1f1;
+  line-height: 100%;
+  border: none;
+  font-family: "rajdhani", "sans-serif";
+  font-size: 1em;
+  text-transform: uppercase;
+  background: linear-gradient(273.81deg, rgba(137, 0, 8, 0.6) 0%, rgba(252, 232, 216, 0.4) 100%);
+}
+/*Filtre */
