--- a/src/App.css
+++ b/src/App.css
@@ -558,6 +558,11 @@ footer {
   text-transform: uppercase;
 }
 /*Catalogues*/
+.panier{
+  position: absolute;
+  margin-left: 80%;
+  margin-top: -50px;
+}
 .CatalFilter{
   padding-top: 50px;
   width: 100%;
@@ -646,6 +651,30 @@ footer {
 .hrFilter{
   border: 1px solid #ffffff;
   margin-bottom: 20px;
+}
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--color-B11313);
+  border-radius: 50%;
+}
+
+
+input[type="checkbox"]::before {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+
+  border-radius: 50%;
+}
+
+
+input[type="checkbox"]:checked::before {
+  background-color: var(--color-B11313);
 }
 .checkItems {
   display: flex;
